@@ -1,18 +1,18 @@
-package org.ungtb10d.graph.utils;
+package org.ungtb10d.graf.utils;
 
-import org.ungtb10d.graph.ElementType;
-import org.ungtb10d.graph.graphcss.GraphCSS;
-import org.ungtb10d.graph.graphcss.Rule;
-import org.ungtb10d.graph.graphcss.Select;
-import org.ungtb10d.graph.graphcss.StyleSet;
-import org.ungtb10d.graph.graphviz.GraphvizLayout;
-import org.ungtb10d.graph.style.Arrow;
-import org.ungtb10d.graph.style.Compass;
-import org.ungtb10d.graph.style.EdgeRouting;
-import org.ungtb10d.graph.style.LineType;
-import org.ungtb10d.graph.style.NodeShape;
-import org.ungtb10d.graph.style.RankDirection;
-import org.ungtb10d.graph.style.StyleFactory;
+import org.ungtb10d.graf.ElementType;
+import org.ungtb10d.graf.grafcss.grafCSS;
+import org.ungtb10d.graf.grafcss.Rule;
+import org.ungtb10d.graf.grafcss.Select;
+import org.ungtb10d.graf.grafcss.StyleSet;
+import org.ungtb10d.graf.grafviz.grafvizLayout;
+import org.ungtb10d.graf.style.Arrow;
+import org.ungtb10d.graf.style.Compass;
+import org.ungtb10d.graf.style.EdgeRouting;
+import org.ungtb10d.graf.style.LineType;
+import org.ungtb10d.graf.style.NodeShape;
+import org.ungtb10d.graf.style.RankDirection;
+import org.ungtb10d.graf.style.StyleFactory;
 
 /**
  * TODO: UNFINISHED, USES OLD STYLE FIELD NAMES m_
@@ -20,9 +20,9 @@ import org.ungtb10d.graph.style.StyleFactory;
  * @author henrik
  * 
  */
-public class AbstractGraphStyleRuleSetProvider implements IGraphStyleRuleSetProvider {
+public class AbstractgrafStyleRuleSetProvider implements IgrafStyleRuleSetProvider {
 
-	protected GraphvizLayout m_layout = org.ungtb10d.graph.graphviz.GraphvizLayout.dot;
+	protected grafvizLayout m_layout = org.ungtb10d.graf.grafviz.grafvizLayout.dot;
 
 	protected Arrow m_headArrow = Arrow.vee;
 
@@ -50,15 +50,15 @@ public class AbstractGraphStyleRuleSetProvider implements IGraphStyleRuleSetProv
 
 	protected boolean m_edgeDecorate = false;
 
-	protected GraphCSS CGSS = new GraphCSS();
+	protected grafCSS CGSS = new grafCSS();
 
 	protected void configureDefaults() {
-		CGSS.addRule(getDefaultGraphStyle());
+		CGSS.addRule(getDefaultgrafStyle());
 		CGSS.addRule(getDefaultVertexStyle());
 		CGSS.addRule(getDefaultEdgeStyle());
 	}
 
-	public GraphCSS getCGSS() {
+	public grafCSS getCGSS() {
 		return CGSS;
 	}
 
@@ -66,62 +66,62 @@ public class AbstractGraphStyleRuleSetProvider implements IGraphStyleRuleSetProv
 	 * Returns the default rule for ElementType.edge
 	 * This implementation returns NULL_RULE as the default is to use the default for the rendering technology.
 	 * 
-	 * @return GraphStyleRule.NULL_RULE
+	 * @return grafStyleRule.NULL_RULE
 	 */
 	protected Rule getDefaultEdgeStyle() {
 
 		// There is no need to set the value below as they are default when rendering with
-		// graphviz. Setting these values will just cause bloat in the generated graph.
+		// grafviz. Setting these values will just cause bloat in the generated graf.
 
 		// StyleMap edgeStyle = new StyleMap();
-		// edgeStyle.put(new GraphStyle.EdgeBrush(m_edgeLineType, new Double(0.5))); // DEFAULT
-		// edgeStyle.put(new GraphStyle.HeadPort(m_headPort)); // DEFAULT
-		// edgeStyle.put(new GraphStyle.TailPort(m_tailPort)); // DEFAULT
-		// edgeStyle.put(new GraphStyle.ArrowHead(m_headArrow)); //DEFAULT
-		// edgeStyle.put(new GraphStyle.ArrowTail(m_tailArrow)); // DEFAULT
-		// edgeStyle.put(new GraphStyle.ArrowScale(m_arrowScale)); //DEFAULT
-		// edgeStyle.put(new GraphStyle.Decorate(Boolean.valueOf(m_edgeDecorate)));
-		// GraphStyleRule edgeRule = new GraphStyleRule(
-		// new GraphStyleRule.Element(ElementType.edge), edgeStyle);
+		// edgeStyle.put(new grafStyle.EdgeBrush(m_edgeLineType, new Double(0.5))); // DEFAULT
+		// edgeStyle.put(new grafStyle.HeadPort(m_headPort)); // DEFAULT
+		// edgeStyle.put(new grafStyle.TailPort(m_tailPort)); // DEFAULT
+		// edgeStyle.put(new grafStyle.ArrowHead(m_headArrow)); //DEFAULT
+		// edgeStyle.put(new grafStyle.ArrowTail(m_tailArrow)); // DEFAULT
+		// edgeStyle.put(new grafStyle.ArrowScale(m_arrowScale)); //DEFAULT
+		// edgeStyle.put(new grafStyle.Decorate(Boolean.valueOf(m_edgeDecorate)));
+		// grafStyleRule edgeRule = new grafStyleRule(
+		// new grafStyleRule.Element(ElementType.edge), edgeStyle);
 		// return edgeRule;
 		return Rule.NULL_RULE;
 
 	}
 
 	/**
-	 * Returns the default rule for ElementType.graph
-	 * This implementation returns a graph style that concentrates edges, uses spline routing, LR rank
+	 * Returns the default rule for ElementType.graf
+	 * This implementation returns a graf style that concentrates edges, uses spline routing, LR rank
 	 * direction, and with a 2.0 rank separation.
 	 * 
-	 * @return a configured rule for a graph
+	 * @return a configured rule for a graf
 	 */
-	protected Rule getDefaultGraphStyle() {
+	protected Rule getDefaultgrafStyle() {
 		// a StyleMap corresponds to the { } section in a CSS rule
-		StyleSet graphStyle = new StyleSet();
-		graphStyle.put(new StyleFactory.Concentrate(Boolean.valueOf(m_concentrate)));
-		graphStyle.put(new StyleFactory.Routing(m_routing));
-		graphStyle.put(new StyleFactory.RankDirectionStyle(RankDirection.LR));
-		graphStyle.put(new StyleFactory.RankSeparation(new Double(2.0)));
+		StyleSet grafStyle = new StyleSet();
+		grafStyle.put(new StyleFactory.Concentrate(Boolean.valueOf(m_concentrate)));
+		grafStyle.put(new StyleFactory.Routing(m_routing));
+		grafStyle.put(new StyleFactory.RankDirectionStyle(RankDirection.LR));
+		grafStyle.put(new StyleFactory.RankSeparation(new Double(2.0)));
 
 		// a rule corresponds to the 'rules { }' in a CSS rule (example the 'A.Foo#x'is a CSS rule)
-		return new Rule(new Select.Element(ElementType.graph), graphStyle);
+		return new Rule(new Select.Element(ElementType.graf), grafStyle);
 	}
 
 	/**
 	 * Returns the default rule for ElementType.vertex.
 	 * This implementation returns NULL_RULE as the default is to use the default for the rendering technology.
 	 * 
-	 * @return GraphStyleRule.NULL_RULE
+	 * @return grafStyleRule.NULL_RULE
 	 */
 	protected Rule getDefaultVertexStyle() {
 		// There is no need to set the value below as they are default when rendering with
-		// graphviz. Setting these values will just cause bloat in the generated graph.
+		// grafviz. Setting these values will just cause bloat in the generated graf.
 
 		// StyleMap nodeStyle = new StyleMap();
-		// nodeStyle.put(new GraphStyle.Shape(m_nodeShape));
-		// nodeStyle.put(new GraphStyle.NodeBrush(m_nodeLineType, new Double(0.5), m_nodeFilled, m_nodeRounded));
-		// result.addRule(new GraphStyleRule(
-		// new GraphStyleRule.Element(ElementType.vertex), nodeStyle));
+		// nodeStyle.put(new grafStyle.Shape(m_nodeShape));
+		// nodeStyle.put(new grafStyle.NodeBrush(m_nodeLineType, new Double(0.5), m_nodeFilled, m_nodeRounded));
+		// result.addRule(new grafStyleRule(
+		// new grafStyleRule.Element(ElementType.vertex), nodeStyle));
 		return Rule.NULL_RULE;
 	}
 }
